--- a/public/signup.html
+++ b/public/signup.html
@@ -34,7 +34,9 @@
         <div class="card has-text-centered is-wide">
           <div class="card-content">
             <h1 class="heading">Sign Up Form</h1>
-            <form class="login">
+
+            <form class="signup">
+
               <div class="field">
                 <br />
                 <p class="control has-icons-left has-icons-right">
