added reviews form

--- a/public/form.html
+++ b/public/form.html
@@ -224,13 +224,30 @@
           </div>
 
           <div class="field">
-            <label class="label">Nightlife</label>
+            <label class="label"
+              >Where will you be going for a night out on the town?</label
+            >
             <div class="control">
               <!--Itin Nightlife Textarea-->
               <textarea
                 id="itinNight"
                 class="textarea"
                 placeholder="Parties, Clubs, Bars"
+              ></textarea>
+            </div>
+          </div>
+
+          <div class="field">
+            <label class="label"
+              >Have you done this trip before? If so leave a review for other
+              users!</label
+            >
+            <div class="control">
+              <!--Itin Review Textarea-->
+              <textarea
+                id="itinReview"
+                class="textarea"
+                placeholder="What did you enjoy or not enjoy this trip? Any suggestions for other travelers?"
               ></textarea>
             </div>
           </div>
@@ -258,5 +275,6 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="formSub.js"></script>
+    <script type="text/javascript" src="itinerary.js"></script>
   </body>
 </html>
