added successful ajax call to eventful api & appended to page

--- a/public/form.html
+++ b/public/form.html
@@ -132,7 +132,12 @@
             your trip. Use these as suggestions if you want to add onto your
             itinerary!
           </p>
+          <br /><br />
           <div id="event-response"></div>
+          <!-- start -->
+
+          <!-- end -->
+          <div class="error-message"></div>
         </div>
         <div class="column is-1 has-text-centered"></div>
         <div class="column is-4">
@@ -275,6 +280,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="formSub.js"></script>
-    <script type="text/javascript" src="itinerary.js"></script>
+    <script type="text/javascript" src="js/itinerary.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   </body>
 </html>
