--- a/public/form.html
+++ b/public/form.html
@@ -24,6 +24,7 @@
       defer
       src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"
     ></script>
+    <link href="~bulma-calendar/dist/css/bulma-calendar.min.css" rel="stylesheet">
     <title>Trip Tips</title>
   </head>
   <body>
@@ -43,6 +44,8 @@
     <br /><br />
 
     <div class="container">
+      <!-- Bulma Calendar is "input type="date" -->
+      <input type="date">
       <div class="card has-text-centered is-wide main-center-card">
         Enter your travel information below to search for events during your
         trip, and begin creating your itinerary!
@@ -282,6 +285,7 @@
     <script type="text/javascript" src="formSub.js"></script>
     <script type="text/javascript" src="js/itinerary.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-
+    <script src="bulmaCalendar.js"></script>
+    <script src="~bulma-calendar/dist/js/bulma-calendar.min.js"></script>
   </body>
 </html>
