--- a/public/itinerary.html
+++ b/public/itinerary.html
@@ -82,7 +82,7 @@
             </div>
           </div>
         </div>
-        <p class="help">(YYYY-DD-MM)</p>
+        <p class="help">(MM-DD-YYYY)</p>
         <br />
         <div class="field is-horizontal">
           <div class="field-body">
@@ -279,9 +279,7 @@
     <footer class="footer"></footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script type="text/javascript" src="formSub.js"></script>
     <script type="text/javascript" src="js/itinerary.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-
   </body>
 </html>
