--- a/public/members.html
+++ b/public/members.html
@@ -113,6 +113,6 @@
     <footer class="footer"></footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="js/members.js"></script>
   </body>
 </html>
