added go back button on itinerary.html

--- a/public/itinerary.html
+++ b/public/itinerary.html
@@ -118,6 +118,9 @@
                 <button class="button is-info is-light" id="event-search">
                   Search for Events
                 </button>
+                <button id="goHome" class="button is-info is-light">
+                  Go Back
+                </button>
               </div>
             </div>
           </div>
