--- a/public/login.html
+++ b/public/login.html
@@ -77,7 +77,7 @@
                   </button>
                 </p>
               </div>
-              <p>Or sign up <a href="/">here</a></p>
+              <p>Or sign up <a href="/signup">here</a></p>
             </form>
             <br />
           </div>
