--- a/public/signup.html
+++ b/public/signup.html
@@ -85,7 +85,7 @@
                 ></span>
                 <span class="sr-only">Error:</span> <span class="msg"></span>
               </div>
-              <p>Or log in <a href="/login">here</a></p>
+              <p>Or log in <a href="/">here</a></p>
             </form>
           </div>
         </div>
