Three Buttons Working: Create-Your-Own, Sign-Out, and Go-Back.  Email is still not functional.

--- a/public/members.html
+++ b/public/members.html
@@ -79,21 +79,21 @@
             </a>
           </div>
           <div class="buttons" style="padding: 25px">
-            <button class="button is-info is-light create-your-own">
+            <a id="itinTransition" href="/itinerary"><button class="button is-info is-light create-your-own">
               Create Your Own
-            </button>
+            </button></a>
           </div>
         </div>
         <div class="field is-horizontal">
           <div class="field-body">
             <div class="field">
               <div class="control">
-                <button
+                <a id="signOut" href="/login"><button
                   class="button is-info is-light"
                   style="margin-left: 200px"
                 >
                   Sign Out
-                </button>
+                </button></a>
               </div>
             </div>
           </div>
