--- a/public/itinerary.html
+++ b/public/itinerary.html
@@ -118,9 +118,9 @@
                 <button class="button is-info is-light" id="event-search">
                   Search for Events
                 </button>
-                <button id="goHome" class="button is-info is-light">
+                <a id="goBackBtn" href="/members"><button id="goHome" class="button is-info is-light">
                   Go Back
-                </button>
+                </button></a>
               </div>
             </div>
           </div>
