updated event api call, updated format for exisiting itineraries, added favicon

--- a/public/itinerary.html
+++ b/public/itinerary.html
@@ -29,6 +29,7 @@
       rel="stylesheet"
     />
     <title>Trip Tips</title>
+    <link rel="shortcut icon" type="image/ico" href="img/favicon.ico" />
   </head>
   <body>
     <!-- navbar -->
@@ -118,9 +119,15 @@
                 <button class="button is-info is-light" id="event-search">
                   Search for Events
                 </button>
-                <a id="goBackBtn" href="/members"><button id="goHome" class="button is-info is-light">
-                  Go Back
-                </button></a>
+                <a id="goBackBtn" href="/members"
+                  ><button
+                    id="goHome"
+                    class="button is-info is-light"
+                    style="margin-left: 50px;"
+                  >
+                    Go Back
+                  </button></a
+                >
               </div>
             </div>
           </div>
@@ -283,7 +290,7 @@
         </div>
       </div>
     </div>
-    <br /><br /><br />
+    <br /><br />
 
     <footer class="footer"></footer>
 
