--- a/public/login.html
+++ b/public/login.html
@@ -26,6 +26,7 @@
       defer
       src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"
     ></script>
+    <link rel="shortcut icon" type="image/ico" href="img/favicon.ico" />
   </head>
   <body>
     <section class="section">
@@ -36,7 +37,9 @@
               <i class="fas fa-plane"> </i>Trip Tips
             </h1>
 
-            <h2 class="animated flipInY delay-1s">slogan</h2>
+            <h2 class="animated flipInY delay-1s">
+              A place to create, post, and review itineraries.
+            </h2>
             <br />
             <form class="login animated fadeIn delay-2s">
               <div class="field">
