--- a/public/signup.html
+++ b/public/signup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Trip Tips-Sign Up</title>
+    <title>Trip Tips</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
@@ -26,6 +26,7 @@
       defer
       src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"
     ></script>
+    <link rel="shortcut icon" type="image/ico" href="img/favicon.ico" />
   </head>
 
   <body>
@@ -33,9 +34,9 @@
       <div class="container" style="margin-left: 375px">
         <div class="card has-text-centered is-wide">
           <div class="card-content">
-            <h1 class="heading">Sign Up Form</h1>
+            <h1 class="heading animated flipInY">Sign Up Form</h1>
 
-            <form class="signup">
+            <form class="signup animated fadeIn delay-1s">
               <div class="field">
                 <br />
                 <p class="control has-icons-left has-icons-right">
