updated html files with animate css

--- a/public/members.html
+++ b/public/members.html
@@ -35,7 +35,7 @@
     >
       <div class="hero-body">
         <div class="container">
-          <h1 class="title has-text-centered animated bounceIn">
+          <h1 class="title has-text-centered animated lightSpeedIn">
             <i class="fas fa-plane"> </i>Trip Tips
           </h1>
         </div>
@@ -43,7 +43,7 @@
     </section>
     <br /><br />
 
-    <div class="container">
+    <div class="container animated fadeIn delay-1s">
       <div class="card has-text-centered is-wide main-center-card">
         We're so excited you're here to plan a trip! <br />
         Look through our exisiting itineraries; they're reviewed by users, or
@@ -95,7 +95,7 @@
     </div>
     <br /><br />
     <!-- main section -->
-    <div class="container">
+    <div class="container animated fadeIn delay-1s">
       <div class="card has-text-centered middle-card">
         <h1 class="heading">itineraries</h1>
         <div class="itinerary-cards">
