--- a/public/signup.html
+++ b/public/signup.html
@@ -34,7 +34,13 @@
       <div class="container" style="margin-left: 375px">
         <div class="card has-text-centered is-wide">
           <div class="card-content">
-            <h1 class="heading animated flipInY">Sign Up Form</h1>
+            <h1 class="heading animated lightSpeedIn">
+              <i class="fas fa-plane"> </i>Trip Tips
+            </h1>
+
+            <h2 class="animated flipInY delay-1s">
+              Sign Up Form
+            </h2>
 
             <form class="signup animated fadeIn delay-1s">
               <div class="field">
