--- a/public/itinerary.html
+++ b/public/itinerary.html
@@ -39,7 +39,7 @@
     >
       <div class="hero-body">
         <div class="container">
-          <h1 class="title has-text-centered animated bounceIn">
+          <h1 class="title has-text-centered animated lightSpeedIn">
             <i class="fas fa-plane"> </i>Trip Tips
           </h1>
         </div>
@@ -47,7 +47,7 @@
     </section>
     <br /><br />
 
-    <div class="container">
+    <div class="container animated fadeIn delay-1s">
       <!-- Bulma Calendar is "input type="date" -->
       <input type="date" />
       <div class="card has-text-centered is-wide main-center-card">
@@ -135,7 +135,7 @@
       </div>
     </div>
     <br /><br />
-    <div class="container">
+    <div class="container animated fadeIn delay-1s">
       <div
         class="columns is-multiline is-mobile"
         style="background-color: lightsteelblue;"
