--- a/public/login.html
+++ b/public/login.html
@@ -33,7 +33,7 @@
       <div class="container" style="margin-left: 375px">
         <div class="card has-text-centered is-wide">
           <div class="card-content">
-            <h1 class="heading animated bounce">
+            <h1 class="heading animated lightSpeedIn">
               <i class="fas fa-plane"> </i>Trip Tips
             </h1>
 
