--- a/public/itinerary.html
+++ b/public/itinerary.html
@@ -151,7 +151,7 @@
           <br /><br />
           <div id="event-response"></div>
           <!-- start -->
-
+            <h1>TEST</h1>
           <!-- end -->
           <div class="error-message"></div>
         </div>
