added form id for submit

--- a/public/login.html
+++ b/public/login.html
@@ -43,7 +43,7 @@
             <br />
             <form class="login animated fadeIn delay-2s">
               <div class="field">
-                to get started, please log in.
+                if you've been here before please log in, if not please sign up.
                 <br />
                 <p class="control has-icons-left has-icons-right">
                   <input
