--- a/public/itinerary.html
+++ b/public/itinerary.html
@@ -160,133 +160,139 @@
           <h1 class="headingItinerary">Your itinerary</h1>
           <!-- input form -->
           <br />
-          <label class="label">When is your trip?</label>
-          <div class="field has-addons has-text-centered">
-            <div class="field is-horizontal">
+          <!-- *******FORM ID******* -->
+          <form id="createItin">
+            <label class="label">When is your trip?</label>
+            <div class="field has-addons has-text-centered">
+              <div class="field is-horizontal">
+                <div class="field-body">
+                  <div class="field">
+                    <p class="control is-expanded has-icons-left">
+                      <!--Itin Start Date-->
+                      <input
+                        class="input"
+                        type="text"
+                        placeholder="Start Date"
+                        id="itinStartDate"
+                      />
+                      <span class="icon is-small is-left">
+                        <i class="fas fa-calendar"></i>
+                      </span>
+                    </p>
+                  </div>
+                  <div class="field">
+                    <p
+                      class="control is-expanded has-icons-left has-icons-right"
+                    >
+                      <!--Itin End Date-->
+                      <input
+                        class="input"
+                        type="text"
+                        placeholder="End Date"
+                        id="itinEndDate"
+                      />
+                      <span class="icon is-small is-left">
+                        <i class="fas fa-calendar"></i>
+                      </span>
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="field">
+              <label class="label">Where are you going?</label>
               <div class="field-body">
-                <div class="field">
-                  <p class="control is-expanded has-icons-left">
-                    <!--Itin Start Date-->
-                    <input
-                      class="input"
-                      type="text"
-                      placeholder="Start Date"
-                      id="itinStartDate"
-                    />
-                    <span class="icon is-small is-left">
-                      <i class="fas fa-calendar"></i>
-                    </span>
-                  </p>
-                </div>
-                <div class="field">
-                  <p class="control is-expanded has-icons-left has-icons-right">
-                    <!--Itin End Date-->
-                    <input
-                      class="input"
-                      type="text"
-                      placeholder="End Date"
-                      id="itinEndDate"
-                    />
-                    <span class="icon is-small is-left">
-                      <i class="fas fa-calendar"></i>
-                    </span>
-                  </p>
+                <div class="field is-expanded">
+                  <div class="field has-addons">
+                    <p class="control is-expanded has-icons-left">
+                      <!--Itin City Input-->
+                      <input
+                        class="input"
+                        type="text"
+                        placeholder="City"
+                        id="itinCity"
+                      />
+                      <span class="icon is-small is-left">
+                        <i class="fas fa-globe"></i>
+                      </span>
+                    </p>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
 
-          <div class="field">
-            <label class="label">Where are you going?</label>
-            <div class="field-body">
-              <div class="field is-expanded">
-                <div class="field has-addons">
-                  <p class="control is-expanded has-icons-left">
-                    <!--Itin City Input-->
-                    <input
-                      class="input"
-                      type="text"
-                      placeholder="City"
-                      id="itinCity"
-                    />
-                    <span class="icon is-small is-left">
-                      <i class="fas fa-globe"></i>
-                    </span>
-                  </p>
-                </div>
+            <div class="field">
+              <label class="label">Where are you eating?</label>
+              <div class="control">
+                <!--Itin Food Textarea-->
+                <textarea
+                  id="foodTxtArea"
+                  class="textarea"
+                  placeholder="Breakfast, Lunch, Dinner"
+                ></textarea>
               </div>
             </div>
-          </div>
 
-          <div class="field">
-            <label class="label">Where are you eating?</label>
-            <div class="control">
-              <!--Itin Food Textarea-->
-              <textarea
-                id="foodTxtArea"
-                class="textarea"
-                placeholder="Breakfast, Lunch, Dinner"
-              ></textarea>
+            <div class="field">
+              <label class="label"
+                >What activities are you doing while you're there?</label
+              >
+              <div class="control">
+                <!--Itin Activiy Textarea-->
+                <textarea
+                  id="itinAct"
+                  class="textarea"
+                  placeholder="Activities, Sightseeing"
+                ></textarea>
+              </div>
             </div>
-          </div>
 
-          <div class="field">
-            <label class="label"
-              >What activities are you doing while you're there?</label
-            >
-            <div class="control">
-              <!--Itin Activiy Textarea-->
-              <textarea
-                id="itinAct"
-                class="textarea"
-                placeholder="Activities, Sightseeing"
-              ></textarea>
+            <div class="field">
+              <label class="label"
+                >Where will you be going for a night out on the town?</label
+              >
+              <div class="control">
+                <!--Itin Nightlife Textarea-->
+                <textarea
+                  id="itinNight"
+                  class="textarea"
+                  placeholder="Parties, Clubs, Bars"
+                ></textarea>
+              </div>
             </div>
-          </div>
 
-          <div class="field">
-            <label class="label"
-              >Where will you be going for a night out on the town?</label
-            >
-            <div class="control">
-              <!--Itin Nightlife Textarea-->
-              <textarea
-                id="itinNight"
-                class="textarea"
-                placeholder="Parties, Clubs, Bars"
-              ></textarea>
+            <div class="field">
+              <label class="label"
+                >Have you done this trip before? If so leave a review for other
+                users!</label
+              >
+              <div class="control">
+                <!--Itin Review Textarea-->
+                <textarea
+                  id="itinReview"
+                  class="textarea"
+                  placeholder="What did you enjoy or not enjoy this trip? Any suggestions for other travelers?"
+                ></textarea>
+              </div>
             </div>
-          </div>
 
-          <div class="field">
-            <label class="label"
-              >Have you done this trip before? If so leave a review for other
-              users!</label
-            >
-            <div class="control">
-              <!--Itin Review Textarea-->
-              <textarea
-                id="itinReview"
-                class="textarea"
-                placeholder="What did you enjoy or not enjoy this trip? Any suggestions for other travelers?"
-              ></textarea>
+            <div class="field is-grouped">
+              <div class="control">
+                <!--Save Button / "Submit" Button-->
+                <button id="saveItinBtn" class="button is-info is-light">
+                  Save
+                </button>
+              </div>
+              <div class="control">
+                <!--Email Button-->
+                <button id="emailBtn" class="button is-info is-light">
+                  Email
+                </button>
+              </div>
             </div>
-          </div>
-
-          <div class="field is-grouped">
-            <div class="control">
-              <!--Save Button / "Submit" Button-->
-              <button id="saveItinBtn" class="button is-info is-light">
-                Save
-              </button>
-            </div>
-            <div class="control">
-              <!--Email Button-->
-              <button id="emailBtn" class="button is-info is-light">
-                Email
-              </button>
-            </div>
-          </div>
+            <!-- end -->
+          </form>
         </div>
       </div>
     </div>
