--- a/public/members.html
+++ b/public/members.html
@@ -50,45 +50,23 @@
         create your own!
         <br />
         <div class="field has-addons has-text-centered">
-          <div class="control">
-            <br />
-
-            <input
-              class="input"
-              id="citySearch"
-              type="text"
-              placeholder="Search for a City"
-            />
-          </div>
-          <div class="control">
-            <br />
-
-            <a class="button is-info is-light">
-              Search
-            </a>
-          </div>
           <div class="buttons" style="padding: 25px">
             <a id="itinTransition" href="/itinerary"
-              ><button class="button is-info is-light create-your-own">
+              ><button
+                class="button is-info is-light create-your-own"
+                style="margin-left: 50px;"
+              >
                 Create Your Own
               </button></a
             >
-          </div>
-        </div>
-        <div class="field is-horizontal">
-          <div class="field-body">
-            <div class="field">
-              <div class="control">
-                <a id="signOut" href="/login"
-                  ><button
-                    class="button is-info is-light"
-                    style="margin-left: 200px"
-                  >
-                    Sign Out
-                  </button></a
-                >
-              </div>
-            </div>
+            <a id="signOut" href="/login"
+              ><button
+                class="button is-info is-light"
+                style="margin-left: 50px;"
+              >
+                Sign Out
+              </button></a
+            >
           </div>
         </div>
       </div>
@@ -107,8 +85,27 @@
                   <i class="fas fa-map-marker-alt"></i> Las Vegas
                 </p>
                 <p class="subtitle">start-end</p>
-                <p>food, fun, party</p>
-                <p>click here to view the itinerary</p>
+                <p>food:</p>
+                <p>activities:</p>
+                <p>party:</p>
+                <p>reviews:</p>
+                <br />
+                <div class="field">
+                  <label class="label"
+                    >Have you used this itinerary? If so leave a review.</label
+                  >
+                  <div class="control">
+                    <!--Itin Review Textarea-->
+                    <textarea
+                      id="itinReviewPost"
+                      class="textarea"
+                      placeholder="What did you enjoy or not enjoy this trip? Any suggestions for other travelers?"
+                    ></textarea>
+                    <button id="postReview" class="button is-info is-light">
+                      Post My Review
+                    </button>
+                  </div>
+                </div>
               </article>
             </div>
             <div class="tile is-parent">
@@ -122,6 +119,7 @@
               </article>
             </div>
           </div>
+
           <div class="tile is-ancestor">
             <div class="tile is-parent">
               <article class="tile is-child box">
